# ai_hackathon_2026

./: ARCHITECTURE.md  PROBLEM.md  README.md  SETUP.md  app.py  conftest.py  demo.py  main.py  pyproject.toml  register_agents.py  requirements.txt  summary.md
.streamlit/: config.toml
fetch/: bureau.py  bureau_multi.py  client_agent.py  demo_client.py  messages.py  pipeline_agent.py
fetch/multi/: messages.py  orchestrator.py  report_agent.py  session.py  stage1_agent.py  stage2_agent.py  stage3_bcell_agent.py  stage3_tcr_agent.py  stage4_agent.py
slides/: immunoverse_a.pptx  immunoverse_b.pptx  immunoverse_pitch.pptx  restructure_slides.py
src/: scoring.py
src/agents/: graph.py  nodes.py
src/models/: __init__.py  pipeline.py
src/tools/: __init__.py  base.py  registry.py
src/tools/mock/: __init__.py  stage1.py  stage2.py  stage3.py  stage4.py
src/tools/real/: bcell_tool.py  hla_tool.py  structural_tool.py
src/tools/report/: __init__.py  asi1_tool.py  claude_tool.py  context.py  mock_tool.py
tests/: test_structural_tool.py
