[project]
name = "ai-hackathon-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.111.0",
    "biopython>=1.87",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "openai>=2.43.0",
    "plotly>=6.8.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "streamlit>=1.58.0",
    "uagents>=0.25.2",
]
